midn-userplane/builds/build_126/ebpf-build.txt
[1m[33mwarning[0m: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/runner/work/midn/midn/crates/midn-userplane-ebpf/Cargo.toml
workspace: /home/runner/work/midn/midn/Cargo.toml
[1m[92m Downloading[0m crates ...
[1m[92m  Downloaded[0m aya-build v0.1.3
[1m[92m   Compiling[0m serde_core v1.0.228
[1m[92m   Compiling[0m zmij v1.0.21
[1m[92m   Compiling[0m serde_json v1.0.150
[1m[92m   Compiling[0m thiserror v2.0.18
[1m[92m   Compiling[0m serde v1.0.228
[1m[92m   Compiling[0m camino v1.2.2
[1m[92m   Compiling[0m itoa v1.0.18
[1m[92m   Compiling[0m anyhow v1.0.102
[1m[92m   Compiling[0m semver v1.0.28
[1m[92m   Compiling[0m rustc_version v0.4.1
[1m[92m   Compiling[0m heapless v0.7.17
[1m[92m   Compiling[0m cargo-platform v0.3.3
[1m[92m   Compiling[0m cargo_metadata v0.23.1
[1m[92m   Compiling[0m postcard v1.1.3
[1m[92m   Compiling[0m midn-proto v0.1.0 (/home/runner/work/midn/midn/crates/midn-proto)
[1m[92m   Compiling[0m aya-build v0.1.3
[1m[92m   Compiling[0m midn-userplane v0.1.0 (/home/runner/work/midn/midn/crates/midn-userplane)
[1m[91merror[E0432][0m[1m: unresolved import `aya_build::cargo_metadata`[0m
  [1m[94m--> [0mcrates/midn-userplane/build.rs:30:9
   [1m[94m|[0m
[1m[94m30[0m [1m[94m|[0m     use aya_build::cargo_metadata;
   [1m[94m|[0m         [1m[91m^^^^^^^^^^^^^^^^^^^^^^^^^[0m [1m[91mno `cargo_metadata` in the root[0m

[1m[91merror[E0425][0m[1m: cannot find function `build_ebpf_programs` in crate `aya_build`[0m
  [1m[94m--> [0mcrates/midn-userplane/build.rs:41:16
   [1m[94m|[0m
[1m[94m41[0m [1m[94m|[0m     aya_build::build_ebpf_programs(&[ebpf_package])?;
   [1m[94m|[0m                [1m[91m^^^^^^^^^^^^^^^^^^^[0m [1m[91mnot found in `aya_build`[0m

[1mSome errors have detailed explanations: E0425, E0432.[0m
[1mFor more information about an error, try `rustc --explain E0425`.[0m
[1m[91merror[0m: could not compile `midn-userplane` (build script) due to 2 previous errors
